add loader, footer

--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,8 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <div class="film-wrapper">
-        <header class="header wrap padding">
-    <figure>
-        <a href="">
-            <img src="../../img/logo.png" alt="movie rise">
-        </a>
-    </figure>
+    <header class="header wrap padding">
+    <a href="" class="logo">Movie<span>rise</span></a>
     <form method="GET">
         <label>
             <input type="search" class="movie-button">
@@ -29,6 +24,7 @@
         <input type="button" class="movie-button" value="Sign Up">
     </form>
 </header>
+    <div class="film-wrapper">
         <div class="slider padding">
     <div class="slider__page wrap">
         <button type="button"></button>
@@ -392,6 +388,147 @@
         </div>
     </div>
 </div>
+<aside class="banner-wrapper wrap">
+    <div class="banner">
+        <h2>Receive information on the latest hit movies straight to your inbox</h2>
+        <button class="movie-button active">Subscribe!</button>
     </div>
+</aside>
+<div class="content wrap">
+    <div class="film" style="background-image: url(../../img/6.png)">
+        <div class="description-hover">
+            <button type="button" class="film-watch">
+                <i class="fa fa-play"></i>
+            </button>
+            <span>Watch Now</span>
+            <button class="movie-button-border">View info</button>
+        </div>
+        <div class="description-wrapper">
+            <div class="film__description">
+                <h2 class="clip">Captain America Civil War</h2>
+                <div class="film__description--rating">4.9</div>
+                <ul class="film__description--range clip">
+                    <li><a href="">Action</a></li>
+                    <li><a href="">Adventure</a></li>
+                    <li><a href="">Sci-Fi</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="film" style="background-image: url(../../img/2.png)">
+        <div class="description-hover">
+            <button type="button" class="film-watch">
+                <i class="fa fa-play"></i>
+            </button>
+            <span>Watch Now</span>
+            <button class="movie-button-border">View info</button>
+        </div>
+        <div class="description-wrapper">
+            <div class="film__description">
+                <h2 class="clip">AssAssin’s Creed</h2>
+                <div class="film__description--rating">4.2</div>
+                <ul class="film__description--range clip">
+                    <li><a href="">Action</a></li>
+                    <li><a href="">Adventure</a></li>
+                    <li><a href="">Fantasy</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="film" style="background-image: url(../../img/5.png)">
+        <div class="description-hover">
+            <button type="button" class="film-watch">
+                <i class="fa fa-play"></i>
+            </button>
+            <span>Watch Now</span>
+            <button class="movie-button-border">View info</button>
+        </div>
+        <div class="description-wrapper">
+            <div class="film__description">
+                <h2 class="clip">Doctor Strange</h2>
+                <div class="film__description--rating">4.8</div>
+                <ul class="film__description--range clip">
+                    <li><a href="">Action</a></li>
+                    <li><a href="">Adventure</a></li>
+                    <li><a href="">Fantasy</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="film" style="background-image: url(../../img/7.png)">
+        <div class="description-hover">
+            <button type="button" class="film-watch">
+                <i class="fa fa-play"></i>
+            </button>
+            <span>Watch Now</span>
+            <button class="movie-button-border">View info</button>
+        </div>
+        <div class="description-wrapper">
+            <div class="film__description">
+                <h2 class="clip">Alice Through the bla-bla</h2>
+                <div class="film__description--rating">4.1</div>
+                <ul class="film__description--range clip">
+                    <li><a href="">Adventure</a></li>
+                    <li><a href="">Family</a></li>
+                    <li><a href="">Fantasy</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+        <div class="spinner">
+    <div class="bounce1"></div>
+    <div class="bounce2"></div>
+    <div class="bounce3"></div>
+</div>
+    </div>
+    <div class="footer-wrapper">
+    <div class="footer wrap">
+        <nav class="footer__menu">
+            <ul class="flex">
+                <li>
+                    <a href="">About</a>
+                </li>
+                <li>
+                    <a href="">Terms of Service</a>
+                </li>
+                <li>
+                    <a href="">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="footer__copyright flex flex-column">
+            <a href="" class="logo center">Movie<span>rise</span></a>
+            <div class="footer__copyright--description center">
+                <span>
+                    Copyright © 2017
+                </span>
+                <a class="logo">
+                    MOVIE<span>RISE</span>
+                </a>.
+                <span>
+                    All Rights Reserved.
+                </span>
+            </div>
+        </div>
+        <div class="footer__social flex-wrap">
+            <a href="">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="">
+                <i class="fab fa-pinterest-p"></i>
+            </a>
+            <a href="">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="">
+                <i class="fab fa-youtube"></i>
+            </a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
