--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header wrap padding">
     <a href="" class="logo">Movie<span>rise</span></a>
-    <form method="GET">
+    <form method="GET" class="fle flex-wrap center">
         <label>
             <input type="search" class="movie-button">
             <i class="fas fa-search"></i>
@@ -482,10 +482,10 @@
     <div class="bounce3"></div>
 </div>
     </div>
-    <div class="footer-wrapper">
+    <div class="footer-wrapper padding">
     <div class="footer wrap">
-        <nav class="footer__menu">
-            <ul class="flex">
+        <nav class="footer__menu flex">
+            <ul class="flex flex flex-wrap">
                 <li>
                     <a href="">About</a>
                 </li>
@@ -499,19 +499,8 @@
         </nav>
         <div class="footer__copyright flex flex-column">
             <a href="" class="logo center">Movie<span>rise</span></a>
-            <div class="footer__copyright--description center">
-                <span>
-                    Copyright © 2017
-                </span>
-                <a class="logo">
-                    MOVIE<span>RISE</span>
-                </a>.
-                <span>
-                    All Rights Reserved.
-                </span>
-            </div>
         </div>
-        <div class="footer__social flex-wrap">
+        <div class="footer__social flex flex-wrap">
             <a href="">
                 <i class="fab fa-facebook-f"></i>
             </a>
@@ -528,6 +517,17 @@
                 <i class="fab fa-youtube"></i>
             </a>
         </div>
+    </div>
+    <div class="footer-copyright center flex flex-wrap">
+        <span>
+            Copyright © 2017
+        </span>
+        <a class="logo">
+            MOVIE<span>RISE</span>
+        </a>.
+        <span>
+            All Rights Reserved.
+        </span>
     </div>
 </div>
 </body>
