--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MovieRise</title>
-    <link rel="stylesheet" href="../css/fonts.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet"
           href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
           crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header wrap padding">
@@ -126,7 +126,7 @@
     </div>
 </nav>
         <div class="content wrap">
-    <div class="film hide" style="background-image: url(../../img/1.png)">
+    <div class="film hide" style="background-image: url(img/1.png)">
         <div class="description-wrapper">
             <div class="film__description">
                 <h2 class="clip">Fantastic Beasts</h2>
@@ -139,7 +139,7 @@
             </div>
         </div>
     </div>
-    <div class="film film-active show" style="background-image: url(../../img/1.png)">
+    <div class="film film-active show" style="background-image: url(img/1.png)">
         <div class="transparent"></div>
         <div class="film-active-wrapper">
             <div class="control-button flex">
@@ -170,7 +170,7 @@
             <button type="button" class="movie-button-border active">Watch Now</button>
         </div>
     </div>
-    <div class="film" style="background-image: url(../../img/2.png)">
+    <div class="film" style="background-image: url(img/2.png)">
         <div class="description-hover">
             <button type="button" class="film-watch">
                 <i class="fa fa-play"></i>
@@ -190,7 +190,7 @@
             </div>
         </div>
     </div>
-    <div class="film" style="background-image: url(../../img/3.png)">
+    <div class="film" style="background-image: url(img/3.png)">
         <div class="description-hover">
             <button type="button" class="film-watch">
                 <i class="fa fa-play"></i>
@@ -210,7 +210,7 @@
             </div>
         </div>
     </div>
-    <div class="film" style="background-image: url(../../img/4.png)">
+    <div class="film" style="background-image: url(img/4.png)">
         <div class="description-hover">
             <button type="button" class="film-watch">
                 <i class="fa fa-play"></i>
@@ -230,7 +230,7 @@
             </div>
         </div>
     </div>
-    <div class="film" style="background-image: url(../../img/5.png)">
+    <div class="film" style="background-image: url(img/5.png)">
         <div class="description-hover">
             <button type="button" class="film-watch">
                 <i class="fa fa-play"></i>
@@ -250,7 +250,7 @@
             </div>
         </div>
     </div>
-    <div class="film" style="background-image: url(../../img/6.png)">
+    <div class="film" style="background-image: url(img/6.png)">
         <div class="description-hover">
             <button type="button" class="film-watch">
                 <i class="fa fa-play"></i>
@@ -270,7 +270,7 @@
             </div>
         </div>
     </div>
-    <div class="film" style="background-image: url(../../img/7.png)">
+    <div class="film" style="background-image: url(img/7.png)">
         <div class="description-hover">
             <button type="button" class="film-watch">
                 <i class="fa fa-play"></i>
@@ -290,7 +290,7 @@
             </div>
         </div>
     </div>
-    <div class="film" style="background-image: url(../../img/8.png)">
+    <div class="film" style="background-image: url(img/8.png)">
         <div class="description-hover">
             <button type="button" class="film-watch">
                 <i class="fa fa-play"></i>
@@ -310,7 +310,7 @@
             </div>
         </div>
     </div>
-    <div class="film" style="background-image: url(../../img/9.png)">
+    <div class="film" style="background-image: url(img/9.png)">
         <div class="description-hover">
             <button type="button" class="film-watch">
                 <i class="fa fa-play"></i>
@@ -330,7 +330,7 @@
             </div>
         </div>
     </div>
-    <div class="film" style="background-image: url(../../img/10.png)">
+    <div class="film" style="background-image: url(img/10.png)">
         <div class="description-hover">
             <button type="button" class="film-watch">
                 <i class="fa fa-play"></i>
@@ -349,7 +349,7 @@
             </div>
         </div>
     </div>
-    <div class="film" style="background-image: url(../../img/11.png)">
+    <div class="film" style="background-image: url(img/11.png)">
         <div class="description-hover">
             <button type="button" class="film-watch">
                 <i class="fa fa-play"></i>
@@ -368,7 +368,7 @@
             </div>
         </div>
     </div>
-    <div class="film" style="background-image: url(../../img/12.png)">
+    <div class="film" style="background-image: url(img/12.png)">
         <div class="description-hover">
             <button type="button" class="film-watch">
                 <i class="fa fa-play"></i>
@@ -395,7 +395,7 @@
     </div>
 </aside>
 <div class="content wrap">
-    <div class="film" style="background-image: url(../../img/6.png)">
+    <div class="film" style="background-image: url(img/6.png)">
         <div class="description-hover">
             <button type="button" class="film-watch">
                 <i class="fa fa-play"></i>
@@ -415,7 +415,7 @@
             </div>
         </div>
     </div>
-    <div class="film" style="background-image: url(../../img/2.png)">
+    <div class="film" style="background-image: url(img/2.png)">
         <div class="description-hover">
             <button type="button" class="film-watch">
                 <i class="fa fa-play"></i>
@@ -435,7 +435,7 @@
             </div>
         </div>
     </div>
-    <div class="film" style="background-image: url(../../img/5.png)">
+    <div class="film" style="background-image: url(img/5.png)">
         <div class="description-hover">
             <button type="button" class="film-watch">
                 <i class="fa fa-play"></i>
@@ -455,7 +455,7 @@
             </div>
         </div>
     </div>
-    <div class="film" style="background-image: url(../../img/7.png)">
+    <div class="film" style="background-image: url(img/7.png)">
         <div class="description-hover">
             <button type="button" class="film-watch">
                 <i class="fa fa-play"></i>
@@ -526,6 +526,12 @@
             MOVIE<span>RISE</span>
         </a>.
         <span>
+            All Rights Reserved.
+        </span>
+    </div>
+</div>
+</body>
+</html>       <span>
             All Rights Reserved.
         </span>
     </div>
